Try loading the language file differently This worked locally T_T
(cherry picked from commit 59d707661474ddaaaf7a476d8d8bd8ff06dfeee6)