@@ -12,9 +12,7 @@ import net.hypixel.nerdbot.api.database.model.user.UserLanguage;
 import net.hypixel.nerdbot.util.JsonUtil;
 import org.jetbrains.annotations.Nullable;
 
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.io.InputStream;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -32,7 +30,6 @@ public class TranslationManager {
      * Load the language file based on the {@link UserLanguage} file name
      *
      * @param language The {@link UserLanguage} to load translations for
-     *
      * @return A {@link JsonObject} containing the file contents
      */
     private static JsonObject loadTranslations(UserLanguage language) {
@@ -40,11 +37,15 @@ public class TranslationManager {
             return TRANSLATION_CACHE.get(language);
         }
 
-        try {
-            Path path = Paths.get("./src/main/resources/languages/" + language.getFileName());
-            String content = new String(Files.readAllBytes(path));
-            JsonObject jsonObject = NerdBotApp.GSON.fromJson(content, JsonObject.class);
+        try (InputStream stream = TranslationManager.class.getClassLoader().getResourceAsStream("languages/" + language.getFileName())) {
+            if (stream == null) {
+                throw new RuntimeException("Failed to load translations for language " + language.name() + " from " + language.getFileName());
+            }
+
+            String contents = new String(stream.readAllBytes());
+            JsonObject jsonObject = NerdBotApp.GSON.fromJson(contents, JsonObject.class);
             TRANSLATION_CACHE.put(language, jsonObject);
+            log.info("Loaded translations for language " + language.name() + " from " + language.getFileName());
             return jsonObject;
         } catch (Exception e) {
             log.error("Failed to load translations for language " + language.name(), e);
@@ -68,7 +69,6 @@ public class TranslationManager {
      * @param discordUser The {@link DiscordUser} to take the {@link UserLanguage} from
      * @param key         The key of the translation
      * @param args        Optional arguments to replace variables in the translation
-     *
      * @return A string with the translated key based on the {@link DiscordUser}'s {@link UserLanguage} and any optional arguments
      */
     public static String translate(@Nullable DiscordUser discordUser, String key, Object... args) {
@@ -113,7 +113,6 @@ public class TranslationManager {
      *
      * @param key  The key of the translation
      * @param args Optional arguments to replace variables in the translation
-     *
      * @return A translated string using the default {@link UserLanguage} of the given key and optional arguments
      */
     public static String translate(String key, Object... args) {
